<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="false">

    <!--Thank you tutlane.com from your example in using the scrollview https://www.tutlane.com/tutorial/android/android-scrollview-horizontal-vertical-with-examples-->
    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/Header"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="80dp"

            android:text="@string/tartunatiedot_header"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/HeaderYhteensa"
            android:layout_width="178dp"
            android:layout_height="37dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"

            android:text="Yhteensä Suomessa"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/black"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/InfectedCountView"
            android:layout_width="318dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:background="@drawable/border"
            android:text="@string/total_info"
            android:textAlignment="center"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/HeaderMaakunnittain"
            android:layout_width="178dp"
            android:layout_height="37dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"

            android:text="Maakunnittain"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/black"
            android:textAlignment="center"/>

        <Spinner
            android:id="@+id/maakunnat_spinner"
            android:layout_width="353dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/InfectedMaakuntaView"
            android:layout_width="321dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:background="@drawable/border"
            android:text="@string/maakunta_info"
            android:textAlignment="center"
            android:textColor="@android:color/black" />


        <TextView
            android:id="@+id/InfoView"
            android:layout_width="321dp"
            android:layout_height="89dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:background="@drawable/border"
            android:text="Tartuntamäärät varmistettuja, testattuja tartuntoja. Todellinen määrä voi olla jopa 20-30 -kertainen. \n\nLähde: THL"
            android:textAlignment="center"
            android:textColor="@android:color/black" />

        <ImageView
            android:id="@+id/ThlLogoView"
            android:layout_width="124dp"
            android:layout_height="97dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            app:srcCompat="@drawable/thllogo" />

        <TextView
            android:id="@+id/ClickLogoView"
            android:layout_width="321dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="0dp"
            android:text="Lisää tietoa painamalla logoa"
            android:textAlignment="center"
            android:textColor="@android:color/black" />
    </LinearLayout>

</ScrollView>